--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+_site
+.history
+.git
+build
+.build
+.git
+.history
+.idea
+.jshintrc
+.nyc_output
+.sass-cache
+.vscode
+build
+coverage
+jsconfig.json
+Gemfile.lock
+node_modules
+.DS_Store
+*.map
+*.log
+*.swp
+*~
+
 examples/**/*-bundle.js
 node_modules/
 coverage/
