--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "react-autocomplete",
+  "name": "inferno-autocomplete",
   "version": "1.4.0",
-  "description": "Accessible, extensible, Autocomplete for React.js",
-  "main": "./build/lib/index.js",
+  "description": "Accessible, extensible, Autocomplete for Inferno.js",
+  "main": "./dist/inferno-autocomplete.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/reactjs/react-autocomplete.git"
+    "url": "https://github.com/durango/inferno-autocomplete.git"
   },
-  "homepage": "https://github.com/reactjs/react-autocomplete",
-  "bugs": "https://github.com/reactjs/react-autocomplete/issues",
+  "homepage": "https://github.com/durango/inferno-autocomplete",
+  "bugs": "https://github.com/durango/inferno-autocomplete/issues",
   "directories": {
     "example": "examples"
   },
   "scripts": {
     "lint": "eslint lib examples",
     "pretest": "npm run lint",
-    "test": "jest",
-    "coverage": "jest --coverage",
-    "start": "rackt server"
+    "build": "NODE_ENV=production babel-node --presets es2015 rollup.config.js"
+  },
+  "author": {
+    "name": "",
+    "email": ""
   },
   "authors": [
-    "Ryan Florence <rpflorence@gmail.com>"
+    "Daniel Durante <me@danieldurante.com>"
   ],
   "license": "MIT",
   "devDependencies": {
@@ -31,27 +33,37 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "enzyme": "^2.0.0",
-    "eslint": "^2.13.1",
-    "eslint-config-rackt": "^1.1.1",
-    "jest": "^13.0.0",
-    "rackt-cli": "^0.6.1",
-    "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "eslint": "^2.13.1"
   },
   "tags": [
-    "react",
+    "inferno",
+    "infernojs",
     "autocomplete",
     "combobox",
     "a11y"
   ],
   "keywords": [],
   "dependencies": {
-    "dom-scroll-into-view": "1.0.1"
-  },
-  "peerDependencies": {
-    "react": "^0.14.7 || ^15.0.0-0",
-    "react-dom": "^0.14.7 || ^15.0.0-0"
+    "babel-plugin-inferno": "^1.0.0-legacy",
+    "babel-plugin-module-resolver": "^2.4.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "dom-scroll-into-view": "1.0.1",
+    "eslint-config-rackt": "^1.1.1",
+    "inferno": "^1.0.0-beta32",
+    "inferno-compat": "^1.0.0-beta32",
+    "inferno-component": "^0.7.27",
+    "inferno-create-element": "^0.7.27",
+    "inferno-dom": "^1.0.0-beta32",
+    "rollup": "^0.36.4",
+    "rollup-plugin-buble": "^0.14.0",
+    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-filesize": "^1.0.1",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-uglify": "^1.0.1"
   },
   "jest": {
     "modulePathIgnorePatterns": [
@@ -63,8 +75,8 @@
       "<rootDir>/dist/"
     ],
     "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react",
-      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules/inferno",
+      "<rootDir>/node_modules/inferno-component",
       "<rootDir>/node_modules/enzyme"
     ]
   }
