--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "babel-cli": "^6.5.1",
     "babel-eslint": "6.1.2",
     "babel-jest": "^13.0.0",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-0": "^6.22.0",
     "enzyme": "^2.0.0",
     "eslint": "^2.13.1"
   },
@@ -44,22 +44,21 @@
   ],
   "keywords": [],
   "dependencies": {
-    "babel-plugin-inferno": "^1.0.0-legacy",
-    "babel-plugin-module-resolver": "^2.4.0",
+    "babel-plugin-inferno": "^1.9.0",
+    "babel-plugin-module-resolver": "^2.5.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^6.19.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
-    "dom-scroll-into-view": "1.0.1",
+    "dom-scroll-into-view": "^1.2.1",
     "eslint-config-rackt": "^1.1.1",
-    "inferno": "^1.0.0-beta32",
-    "inferno-compat": "^1.0.0-beta32",
-    "inferno-component": "^0.7.27",
-    "inferno-create-element": "^0.7.27",
-    "inferno-dom": "^1.0.0-beta32",
-    "rollup": "^0.36.4",
-    "rollup-plugin-buble": "^0.14.0",
-    "rollup-plugin-commonjs": "^5.0.5",
+    "inferno": "^1.2.2",
+    "inferno-compat": "^1.2.2",
+    "inferno-component": "^1.2.2",
+    "inferno-create-element": "^1.2.2",
+    "rollup": "^0.41.4",
+    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-commonjs": "^7.0.0",
     "rollup-plugin-filesize": "^1.0.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-replace": "^1.1.1",
